objects/Assessment__c.object
<CustomObject>
    <description>This custom object is used to input data for on-farm assessments. Specifically, the Dairy Sales team is using an on-farm survey in a mobile app called Fast Field forms, and that data is mapped into this custom object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AgeFirstBreeding__c</fullName>
        <description>AgeFirstBreeding maps to FFF Heifer Assessment &gt; Age_First_Breeding</description>
        <label>Age at First Breeding</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgeHayIntroduced__c</fullName>
        <description>Age Hay is Introduced maps to FFF Calf Assessment &gt; Age_Hay_Introduced</description>
        <label>Age Hay is Introduced</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgeTMRStarted__c</fullName>
        <description>Age TMR is Started maps to FFF Heifer Assessment &gt; Age_TMR_Started</description>
        <label>Age TMR is Started</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentType__c</fullName>
        <description>Field is used to denote which type of Fast Field Forms Dairy assessment is being created, a &quot;Full Assessment&quot; or a &quot;Quick Check&quot;</description>
        <label>Assessment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoFeedersUsed__c</fullName>
        <description>Auto-feeders Used maps to FFF Calf Assessment &gt; AutoFeeders_Used </description>
        <label>Auto-feeders Used</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AverageWeight3rdLact__c</fullName>
        <description>Average Weight of 3rd+ Lactation maps to FFF Heifer Assessment &gt; Average_Weight_3rdLact</description>
        <label>Average Weight of 3rd+ Lactation</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Weight_Breeding__c</fullName>
        <description>Average Weight at Breeding maps to FFF Heifer Assessment &gt; Average_Weight_Breeding</description>
        <label>Average Weight at Breeding</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breed__c</fullName>
        <description>Breed maps to Milking Cow Assessment &gt; Breed</description>
        <label>Breed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Butterfat__c</fullName>
        <description>Butterfat maps to Milking Cow Assessment &gt; Butterfat</description>
        <label>Butterfat</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColostrumUsed__c</fullName>
        <description>Colostrum Used maps to FFF Calf Assessment &gt; Colostrum_Used </description>
        <label>Colostrum Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentADGBirthPreFresh__c</fullName>
        <description>Current average daily gain, birth to pre-fresh maps to FFF Calf Assessment &gt; Current_ADG_Birth_PreFresh</description>
        <label>Current ADG birth to pre-fresh</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentADGBirthWeaning__c</fullName>
        <description>Current average daily gain, birth to weaning maps to FFF Calf Assessment &gt; Current_ADG_Birth_Weaning</description>
        <label>Current ADG Birth - Weaning</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAgeFirstCalving__c</fullName>
        <description>Current Age First Calving maps to FFF Calf Assessment &gt; Current_Age_First_Calving</description>
        <label>Current Age First Calving</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentWeaningAge__c</fullName>
        <description>Current Weaning Age maps to FFF Calf Assessment &gt; Current_Weaning_Age</description>
        <label>Current Weaning Age</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastFieldFormsUserName__c</fullName>
        <description>Maps to Fast Field Forms &quot;fullName&quot; field to list the user name of the person who performed the assessment.</description>
        <label>Fast Field Forms User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastFieldSubmissionID__c</fullName>
        <description>Fast Field Form ID which maps to the FFF field &quot;SubmitId&quot;</description>
        <label>Fast Field Submission ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedingFrequency__c</fullName>
        <description>Feeding frequency maps to FFF Calf Assessment &gt; Feeding_Frequency</description>
        <label>Feeding Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedingRateSummer__c</fullName>
        <description>Feeding Rate Summer maps to FFF Calf Assessment &gt; Feeding_Rate_Summer</description>
        <label>Feeding Rate Summer</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedingRateWinter__c</fullName>
        <description>Feeding Rate Winter maps to FFF Calf Assessment &gt; Feeding_Rate_Winter</description>
        <label>Feeding Rate Winter</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FermentedForagesStored__c</fullName>
        <description>How are Fermented Forages Stored maps to Forage Storage Questions &gt; Fermented_Forages_Stored</description>
        <label>How are Fermented Forages Stored</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstServiceConceptionRate__c</fullName>
        <description>First Service Conception Rate maps to FFF Heifer Assessment &gt; First_Service_Conception_Rate</description>
        <label>First Service Conception Rate</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Herd_Tank_Average__c</fullName>
        <description>Herd Tank Average maps to Milking Cow Assessment &gt; Herd_Tank_Average</description>
        <label>Herd Tank Average</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilkReplacerOrMilk__c</fullName>
        <description>Milk Replacer or Milk maps to FFF Calf Assessment &gt; Milk_Replacer_or_Milk</description>
        <label>Milk Replacer or Milk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilkingFrequency__c</fullName>
        <description>Milking Frequency maps to Milking Cow Assessment &gt; Milking_Frequency</description>
        <label>Milking Frequency</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilkingSystem__c</fullName>
        <description>Milking System maps to Milking Cow Assessment &gt; Milking_System</description>
        <label>Milking System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoMilkingAnimals__c</fullName>
        <description>No. of Milking Animals maps to Milking Cow Assessment &gt; No_Milking_Animals</description>
        <label>No. of Milking Animals</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumCalvesMilk__c</fullName>
        <description>Number of calves on milk/milk replacer maps to FFF Calf Assessment &gt; Num_Calves_Milk</description>
        <label>Number Calves on Milk/Milk Replacer</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumCalvesPostWean__c</fullName>
        <description>Number of calves post-weaned – breeding  maps to FFF Calf Assessment &gt; Num_Calves_PostWean</description>
        <label>Number Calves Post-Weaned - Breeding</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumHeifersBreedingPreFresh__c</fullName>
        <description>Number of heifers, breading age to pre-fresh maps to FFF Calf Assessment &gt; Num_Heifers_Breeding_PreFresh</description>
        <label>Number Heifer Breeding Age - Pre-Fresh</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryHousingType__c</fullName>
        <description>Primary Housing Type maps to FFF Calf Assessment &gt; Primary_Housing_Type</description>
        <label>Primary Housing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protein__c</fullName>
        <description>Protein maps to Milking Cow Assessment &gt; Protein</description>
        <label>Protein</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuartsColostrumFed__c</fullName>
        <description>QuartsColostrumFed maps to FFF Calf Assessment &gt; Quarts_Colostrum_Fed </description>
        <label>Quarts of Colostrum Fed</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCC__c</fullName>
        <description>SCC maps to Milking Cow Assessment &gt; SCC</description>
        <label>SCC</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplementalbSTUsed__c</fullName>
        <description>Is Supplemental bST Used maps to Milking Cow Assessment &gt; Supplemental_bST_Used</description>
        <label>Is Supplemental bST Used</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeofAlfalfa__c</fullName>
        <description>Type of Alfalfa maps to Alfalfa Values &gt; Type_of_Alfalfa</description>
        <label>Type of Alfalfa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeofCornSilage__c</fullName>
        <description>Type of Corn Silage maps to Corn Silage Values &gt; Type_of_Corn_Silage</description>
        <label>Type of Corn Silage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Assessment</label>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <recordTypes>
        <fullName>Dairy</fullName>
        <active>true</active>
        <description>Used to distinguish this is a Dairy assessment</description>
        <label>Dairy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>